modules/gdscript/tests/scripts/analyzer/errors/enum_shadows_outer_enum.gd
enum { V }

class InnerClass:
	enum { V }

func test():
	pass
